linuxmuster-cachingserver-server (1.1.0-0) lmn72-testing; urgency=low

  * Add new server / client system with modules and API

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Thu, 31 Aug 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.9-0) lmn72-testing; urgency=low

  * update server and actions

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Thu, 1 Aug 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.8-0) lmn72-testing; urgency=low

  * add posthook and filecheck feature

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Thu, 1 Aug 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.7-0) lmn72-testing; urgency=low

  * new version

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Thu, 1 Aug 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.6-0) lmn72-testing; urgency=low

  * new version

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Thu, 1 Aug 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.5-0) lmn72-testing; urgency=low

  * Rewrite server and client

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Thu, 1 Aug 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.4-0) lmn72-testing; urgency=low

  * Add more functions

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 27 Feb 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.3-0) lmn72-testing; urgency=low

  * update

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 23 Feb 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.2-0) lmn72-testing; urgency=low

  * fix error while install

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 22 Feb 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.1-0) lmn72-testing; urgency=low

  * add server ip and port to install script

 -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 21 Feb 2023 17:28:00 +0200

linuxmuster-cachingserver-server (1.0.0-0) lmn72-testing; urgency=low

  * initial upload
