@@ -6,6 +6,6 @@ Build-Depends: debhelper (>= 4.0.0), fakeroot
 
 Package: linuxmuster-cachingserver-server
 Architecture: all
-Depends: linuxmuster-linbo7, python3-fastapi, uvicorn
+Depends: linuxmuster-linbo7, uvicorn, python3-pip
 Homepage: www.netzint.de
 Description: Linuxmuster Cachingserver for Main-Server
